--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -109,13 +109,11 @@ jobs:
           } >> $GITHUB_ENV
         working-directory: API/infra
 
-      - name: Create SSH key file
+      - name: Create tf_key.pem file
         run: |
           echo "${{ secrets.TF_KEY }}" > tf_key.pem
+          chmod 600 tf_key.pem
         shell: bash
-
-      - name: Set permissions for SSH key
-        run: chmod 600 tf_key.pem
 
       - name: Verify SSH key
         run: |
@@ -131,7 +129,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: ${{ secrets.BASTION_SSH_KEY }}
+          key: tf_key.pem
           script: |
             if ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_IP }} "nc -z -w5 localhost 22"; then
               echo "backend-01 is up"
@@ -145,7 +143,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: ${{ secrets.BASTION_SSH_KEY }}
+          key: tf_key.pem
           script: |
             if ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_IP }} "nc -z -w5 localhost 22"; then
               echo "backend-02 is up"
@@ -159,7 +157,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: ${{ secrets.BASTION_SSH_KEY }}
+          key: tf_key.pem
           script: |
             ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_IP }} << EOF
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
@@ -172,7 +170,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: ${{ secrets.BASTION_SSH_KEY }}
+          key: tf_key.pem
           script: |
             ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_IP }} << EOF
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
