--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,7 +129,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: tf_key.pem
+          key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
             if ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_IP }} "nc -z -w5 localhost 22"; then
               echo "backend-01 is up"
@@ -143,7 +143,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: tf_key.pem
+          key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
             if ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_IP }} "nc -z -w5 localhost 22"; then
               echo "backend-02 is up"
@@ -157,7 +157,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: tf_key.pem
+          key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
             ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_IP }} << EOF
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
@@ -170,7 +170,7 @@ jobs:
         with:
           host: ${{ secrets.BASTION_HOST }}
           username: ${{ secrets.BASTION_USER }}
-          key: tf_key.pem
+          key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
             ssh -o StrictHostKeyChecking=no -i tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_IP }} << EOF
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
