--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -125,7 +125,7 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            if ssh -o StrictHostKeyChecking=no -i ./tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_IP }} "nc -z -w5 localhost 22"; then
+            if ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.EC2_01_IP }} "nc -z -w5 localhost 22"; then
               echo "backend-01 is up"
             else
               echo "backend-01 is down"
@@ -139,7 +139,7 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            if ssh -o StrictHostKeyChecking=no -i ./tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_IP }} "nc -z -w5 localhost 22"; then
+            if ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.EC2_02_IP }} "nc -z -w5 localhost 22"; then
               echo "backend-02 is up"
             else
               echo "backend-02 is down"
@@ -153,7 +153,7 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            ssh -o StrictHostKeyChecking=no -i ./tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_IP }} << EOF
+            if ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.EC2_01_IP }} "nc -z -w5 localhost 22"; then
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
               sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml up -d
@@ -166,7 +166,7 @@ jobs:
           username: ${{ secrets.BASTION_USER }}
           key: ${{ secrets.BASTION_SSH_KEY }}
           script: |
-            ssh -o StrictHostKeyChecking=no -i ./tf_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_IP }} << EOF
+            if ssh -o StrictHostKeyChecking=no -i /home/ubuntu/.ssh/ssh_key.pem ${{ secrets.SERVER_USER }}@${{ secrets.EC2_02_IP }} "nc -z -w5 localhost 22"; then
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
               sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api
               sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml up -d
