--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -69,79 +69,9 @@ jobs:
         working-directory: ./infra
 
       - name: Terraform Plan
-        run: terraform plan -out=tfplan
+        run: terraform plan -out=tfplan -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}"
         working-directory: ./infra
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
+        run: terraform apply -auto-approve -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" tfplan
         working-directory: ./infra
-
-      - name: Get EC2 private IPs
-        id: get_ips
-        run: |
-          echo "EC2_01_PRIVATE_IP=$(terraform output -raw ec2_01_private_ip)" >> $GITHUB_ENV
-          echo "EC2_02_PRIVATE_IP=$(terraform output -raw ec2_02_private_ip)" >> $GITHUB_ENV
-        working-directory: ./infra
-
-      - name: Create SSH key file
-        run: echo "${{ secrets.AWS_SSH_KEY }}" > private_key.pem
-
-      - name: Set permissions for SSH key
-        run: chmod 600 private_key.pem
-
-      - name: Install netcat
-        run: sudo apt-get install -y netcat
-
-      - name: Health Check for backend-01 Server with Bastion Host
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.BASTION_HOST }}
-          username: ${{ secrets.BASTION_USER }}
-          key: private_key.pem
-          script: |
-            if ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_PRIVATE_IP }} "nc -z -w5 localhost 22"; then
-              echo "backend-01 is up"
-            else
-              echo "backend-01 is down"
-              exit 1
-            fi
-
-      - name: Health Check for backend-02 Server with Bastion Host
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.BASTION_HOST }}
-          username: ${{ secrets.BASTION_USER }}
-          key: private_key.pem
-          script: |
-            if ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_PRIVATE_IP }} "nc -z -w5 localhost 22"; then
-              echo "backend-02 is up"
-            else
-              echo "backend-02 is down"
-              exit 1
-            fi
-
-      - name: Deploy to backend-01 Server
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.BASTION_HOST }}
-          username: ${{ secrets.BASTION_USER }}
-          key: private_key.pem
-          script: |
-            ssh -o StrictHostKeyChecking=no -i private_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_01_PRIVATE_IP }} << EOF
-              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
-              sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api
-              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml up -d
-            EOF
-
-      - name: Deploy to backend-02 Server
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.BASTION_HOST }}
-          username: ${{ secrets.BASTION_USER }}
-          key: private_key.pem
-          script: |
-            ssh -o StrictHostKeyChecking-no -i private_key.pem ${{ secrets.SERVER_USER }}@${{ env.EC2_02_PRIVATE_IP }} << EOF
-              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml down
-              sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/foodway-api
-              sudo docker-compose -f /home/ubuntu/AWS/docker-compose.yml up -d
-            EOF
