--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -91,5 +91,5 @@ jobs:
         working-directory: ./API/infra
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" tfplan
+        run: terraform apply -auto-approve tfplan
         working-directory: ./API/infra
