--- a/API/pom.xml
+++ b/API/pom.xml
@@ -144,6 +144,11 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
+			<dependency>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
+				<version>4.0.0-RC3</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
