--- a/API/pom.xml
+++ b/API/pom.xml
@@ -130,10 +130,6 @@
             <artifactId>springfox-core</artifactId>
             <version>3.0.0</version>
         </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-amqp</artifactId>
-		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -143,6 +139,11 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
+				<version>4.0.0-RC3</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
