Revert "Fix/removing amqp (#120)"
This reverts commit 3b9bf68e4e6c2e2a255082488dea2f60e1fad98c.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,12 +84,12 @@ jobs:
 
       - name: Terraform Validate
         run: terraform validate
-        working-directory: API/infra
+        working-directory: ./infra
 
       - name: Terraform Plan
         run: terraform plan -out=tfplan -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}"
-        working-directory: ./API/infra
+        working-directory: ./infra
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve tfplan
-        working-directory: ./API/infra
+        run: terraform apply -auto-approve -var="dockerhub_username=${{ secrets.DOCKERHUB_USERNAME }}" tfplan
+        working-directory: ./infra
