--- a/API/pom.xml
+++ b/API/pom.xml
@@ -130,6 +130,10 @@
             <artifactId>springfox-core</artifactId>
             <version>3.0.0</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -139,11 +143,6 @@
 				<version>${spring-cloud.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
-			</dependency>
-			<dependency>
-				<groupId>jakarta.xml.bind</groupId>
-				<artifactId>jakarta.xml.bind-api</artifactId>
-				<version>4.0.0-RC3</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
