update mobile profile

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -22,8 +22,6 @@ spring.config.location=classpath:/application.properties,classpath:/s3.propertie
 spring.main.allow-circular-references=true
 server.servlet.context-path=/api
 
-#RabbitMQ
-spring.rabbitmq.host=localhost
-spring.rabbitmq.port=5672
-spring.rabbitmq.username=guest
-spring.rabbitmq.password=guest
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
+management.endpoint.prometheus.enabled=true
