update variavel de ambiente

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -18,7 +18,7 @@ jwt.validity=3600000
 spring.banner.location=classpath:banner.txt
 jwt.secret=${JWT_SECRET}
 api.key=${GMAPS_API_KEY}
-LLM_URL=${LLM_URL}
+LLMURL=${LLMURL}
 spring.config.location=classpath:/application.properties,classpath:/s3.properties
 spring.main.allow-circular-references=true
 server.servlet.context-path=/api
