fix: properties and upload products

--- a/API/src/main/resources/application.properties
+++ b/API/src/main/resources/application.properties
@@ -25,3 +25,5 @@ server.servlet.context-path=/api
 management.endpoints.web.exposure.include=*
 management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+management.endpoint.health.show-details=always
